--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/*sections*/
+
 .untracked-section {
   display: flex;
   flex-direction: column;
@@ -5,7 +7,8 @@
 
 }
 
-/************/
+/*buttons*/
+
 button {
   width:  230px;
   height: 35px;
